# hamstest

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-adapters.yml  publish-hamstest.yml
examples/: ks_2samp.py  mannwhitneyu.py
hamstest/: MANIFEST.in  README.md  pyproject.toml  setup.py
hamstest/hamstest/: __init__.py  estimate.py  experiments.py  plotting.py  subset.py  test.py  utils.py
hamstest/hamstest/permutation_tests/: __init__.py  kstest.py  mannwhitneyutest.py
hamstest/hamstest_native/: __init__.py  adapter.hpp  build.py  fastpath.py  registration.py  scaffold.py
hamstest/src/: native.cpp
hamstest_adapter_ks/: README.md  pyproject.toml  setup.py
hamstest_adapter_ks/hamstest_adapter_ks/: __init__.py
hamstest_adapter_ks/src/: adapter.cpp
hamstest_adapter_mannwhitneyu/: LICENSE  README.md  pyproject.toml  setup.py
hamstest_adapter_mannwhitneyu/hamstest_adapter_mannwhitneyu/: __init__.py
hamstest_adapter_mannwhitneyu/src/: adapter.cpp
notebooks/: tutorial.ipynb
tests/: conftest.py  test_examples.py  test_ks_accuracy.py  test_mannwhitneyu_accuracy.py  test_native_logging.py
