[build-system]
requires = ["setuptools>=77", "wheel", "pybind11>=2.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamstest"
version = "0.1.1"
description = "Estimate very small p-values in permutation tests using multilevel splitting"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nikita Golikov" },
    { name = "Vladimir Sukhov" },
    { name = "Gennady Korotkevich" },
    { name = "Alexey Sergushichev", email = "alsergbox@gmail.com" },
]
maintainers = [
    { name = "Alexey Sergushichev", email = "alsergbox@gmail.com" },
]
keywords = [
    "permutation-test",
    "p-value",
    "statistics",
    "multilevel-splitting",
    "scientific-computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13"
]

[project.optional-dependencies]
adapters = [
    "hamstest-adapter-ks>=0.1.0,<0.2.0",
    "hamstest-adapter-mannwhitneyu>=0.1.0,<0.2.0",
]
plotting = [
    "joblib>=1.3",
    "matplotlib>=3.9",
    "pandas>=2.0"
]
dev = ["pytest>=8.0", "ruff>=0.8.0"]

[project.scripts]
hamstest-adapter-init = "hamstest_native.scaffold:main"

[project.urls]
Homepage = "https://github.com/golikov-nik/hamstest"
Repository = "https://github.com/golikov-nik/hamstest"
Issues = "https://github.com/golikov-nik/hamstest/issues"
