[build-system]
requires = ["setuptools>=77", "wheel", "pybind11>=2.12.0", "hamstest>=0.1.0,<0.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamstest-adapter-ks"
version = "0.1.0"
description = "Native C++ adapter for hamstest Kolmogorov-Smirnov permutation tests"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nikita Golikov" },
    { name = "Vladimir Sukhov" },
    { name = "Gennady Korotkevich" },
    { name = "Alexey Sergushichev", email = "alsergbox@gmail.com" },
]
maintainers = [
    { name = "Alexey Sergushichev", email = "alsergbox@gmail.com" },
]
keywords = [
    "kolmogorov-smirnov",
    "permutation-test",
    "p-value",
    "statistics",
    "hamstest",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["hamstest>=0.1.0,<0.2.0"]

[project.urls]
Homepage = "https://github.com/golikov-nik/hamstest"
Repository = "https://github.com/golikov-nik/hamstest/tree/main/hamstest_adapter_ks"
Issues = "https://github.com/golikov-nik/hamstest/issues"
