[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=2.12.0", "hamstest>=0.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamstest-adapter-mannwhitneyu"
version = "0.1.0"
description = "Mann-Whitney U test C++ adapter for hamstest-native"
requires-python = ">=3.10"
dependencies = ["hamstest>=0.1.0"]
